# rrc_2022_datasets

./: .gitignore  CHANGELOG.md  README.md  setup.cfg  setup.py
demo/: load_dataset.py  load_filtered_dicts.py  load_flattened_dataset.py
rrc_2022_datasets/: __init__.py  dataset_env.py  evaluate_pre_stage.py  evaluation.py  policy_base.py  sim_env.py  utils.py
rrc_2022_datasets/spaces/: binary_space.py  box_space.py  dict_space.py  gym_conv_dict.py  multi_binary_space.py  space.py  tuple_space.py  utils.py
scripts/: evaluate_policy_sim.py
