[metadata]
name = rrc_2022_datasets
version = attr: rrc_2022_datasets.__version__
description = Gym environments which provide offline RL datasets collected on the TriFinger system.
long_description = file: README.md
author = Nico Gürtler
author_email = nico.guertler@tuebingen.mpg.de
keywords =
    offline reinforcement learning
    TriFinger
    Real Robot Challenge
    dexterous manipulation
license = FIXME

[options]
packages = find:
install_requires = 
    numpy
    gym
    h5py
    tqdm
    numpy-quaternion
    trifinger_simulation

[options.package_data]
* = *.npy
