[metadata]
name = rrc_2022_datasets
version = attr: rrc_2022_datasets.__version__
description = Gym environments which provide offline RL datasets collected on the TriFinger system.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nico Gürtler
author_email = nico.guertler@tuebingen.mpg.de
keywords =
    offline reinforcement learning
    TriFinger
    Real Robot Challenge
    dexterous manipulation
license = BSD 3-Clause

[options]
packages = find:
install_requires = 
    numpy
    gym
    h5py
    tqdm
    numpy-quaternion
    trifinger_simulation>=1.4.0

[options.package_data]
rrc_2022_datasets = py.typed
rrc_2022_datasets.data = *.npy

[options.entry_points]
console_scripts =
    rrc2022_evaluate_pre_stage = rrc_2022_datasets.scripts.evaluate_pre_stage:main
